--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "sass": "^1.59.3"
   },
   "devDependencies": {
