--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7",
-    "sass": "^1.59.3"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@zeit/next-sass": "^1.0.1",
+    "sass": "^1.59.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "typescript": "5.0.2"
